# evm-bench

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benchmarks/ten-thousand-hashes/: TenThousandHashes.sol
runners/akula/: entry.sh
runners/akula/src/: main.rs
runners/eels/cpython/: entry
runners/eels/pypy/: entry
runners/ethereumjs/: entry.sh  package-lock.json  package.json  runner.ts
runners/evmone/: CMakeLists.txt  entry.sh
runners/geth/: entry.sh  go.mod  go.sum  runner.go
runners/py-evm/: pyproject.toml  requirements.txt  runner.py
runners/py-evm/cpython/: entry.sh
runners/py-evm/pypy/: entry.sh
runners/pyrevm/: entry.sh  pyproject.toml  runner.py
runners/revm/: Cargo.toml  entry.sh
runners/revm/src/: main.rs
src/: build.rs  exec.rs  main.rs  metadata.rs  results.rs  run.rs
