[tool.poetry]
name = "runner-py-evm"
version = "0.1.0"
description = ""
authors = ["Ziyad Edher <ziyad.edher@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
py-evm = "^0.10.1b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
