[tool.poetry]
name = "runner-pyrevm"
version = "0.1.0"
description = ""
authors = ["Ziyad Edher <ziyad.edher@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pyrevm = { git = "https://github.com/gakonst/pyrevm.git", branch = "master" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
